Fixing bug in navigation where the hamburger menu jumps around sometimes in mobile.

--- a/src/css/home-navigation.css
+++ b/src/css/home-navigation.css
@@ -26,6 +26,11 @@
     right: 14px;
 }
 
+.home-navigation .navbar-toggler.collapsed {
+    position: fixed;
+    z-index: 30000;
+}
+
 .home-navbar-link-container {
     justify-content: center;
     display: flex;
