--- a/src/css/navigation.css
+++ b/src/css/navigation.css
@@ -40,12 +40,17 @@ a {
     padding: 7px 7px 7px 0;
 }
 
-.navbar-toggler {
+.navbar-toggler {    
     position: absolute;
-    right: 10px;
+    right: 10px;    
     border: none;
     height: 44px;
     border-radius: 0;
+}
+
+.global-navbar .navbar-toggler {
+    position: sticky;
+    padding-right: 12px;
 }
 
 .navbar-toggler-icon {
@@ -68,8 +73,8 @@ a {
     background: white;
 }
 
-button.navbar-toggler.collapsed {
-    position: fixed;
+.global-navbar .navbar-toggler.collapsed {
+    position: sticky;
     z-index: 30000;
 }
 
